kvx-macros/tests/macro/fail-segment-whitespace-front.stderr
error: segments must not start or end with whitespace
 --> tests/macro/fail-segment-whitespace-front.rs:4:36
  |
4 | const SEGMENT: &Segment = segment!(" test");
  |                                    ^^^^^^^
